--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,12 @@ language: generic
 services:
 - docker
 
-script:
-- make test
-- docker build . -f dockerfiles/arch
-- docker build . -f dockerfiles/xenial
-- docker build . -f dockerfiles/artful 
+install:
+- docker build . -t arch -f dockerfiles/arch
+- docker build . -t xenial -f dockerfiles/xenial
+- docker build . -f -t artful dockerfiles/artful 
 
+script:
+- docker run -t arch make test
+- docker run -t xenial make test
+- docker run -t artful make test
