--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,9 @@ services:
 install:
 - docker build . -t arch -f dockerfiles/arch
 - docker build . -t xenial -f dockerfiles/xenial
+- docker build . -t artful -f dockerfiles/artful
 
 script:
 - docker run -t arch make test
 - docker run -t xenial make test
+- docker run -t artful make test
